versions/1.21.4/translated/ru_ru/develop/items/custom-armor.md
---
title: Собственная броня
description: Вы узнаете как создавать собственные комплекты брони.
authors:
  - IMB11
---

Броня дает игроку повышенную защиту от атак мобов и других игроков.

## Создание класса для материалов брони {#creating-an-armor-materials-class}

Технически вам не нужен специальный класс для материала вашей брони, но в любом случае это хорошая практика, учитывая количество статических полей, которые вам понадобятся.

В этом примере мы создадим класс `GuiditeArmorMaterial` для хранения наших статических полей.

### Базовая прочность {#base-durability}

Эта константа будет использоваться в методе `Item.Properties#maxDamage(int damageValue)` при создании наших предметов брони. Она также потребуется в качестве параметра в конструкторе `ArmorMaterial`, когда мы позже создадим наш объект `ArmorMaterial`.

@[code transcludeWith=:::base_durability](@/reference/1.21.4/src/main/java/com/example/docs/item/armor/GuiditeArmorMaterial.java)

Если вы пытаетесь определить сбалансированную базовую прочность, вы можете обратиться к экземплярам материалов ванильных доспехов, которые можно найти в интерфейсе `ArmorMaterials`.

### Ключ реестра ассетов оборудования {#equipment-asset-registry-key}

Хотя нам не нужно регистрировать наш `ArmorMaterial` в каких-либо реестрах, игра будет использовать его для поиска соответствующих текстур для нашей брони. Обычно хорошей практикой является хранить любые ключи реестра как константы.

@[code transcludeWith=:::material_key](@/reference/1.21.4/src/main/java/com/example/docs/item/armor/GuiditeArmorMaterial.java)

Мы передадим это конструктору `ArmorMaterial` позже.

### Экземпляр `ArmorMaterial` {#armormaterial-instance}

Чтобы создать наш материал, нам нужно создать новый экземпляр записи `ArmorMaterial`, здесь будут использоваться константы базового ключа реестра прочности и материала.

@[code transcludeWith=:::guidite_armor_material](@/reference/1.21.4/src/main/java/com/example/docs/item/armor/GuiditeArmorMaterial.java)

Конструктор `ArmorMaterial` принимает следующие параметры в указанном порядке:

| Параметр              | Описание                                                                                                                                                                                                                                                                    |
| --------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| `durability`          | Базовая прочность всех частей брони, которая используется при расчете общей прочности каждого отдельного частей брони, в котором используется этот материал. Это должна быть базовая константа прочности, которую вы создали ранее.         |
| `defense`             | Сопоставление `EquipmentType` (перечисление, представляющее каждый слот для брони) с целым значением, которое указывает защитную ценность материала при использовании в соответствующем слоте для брони.                                 |
| `enchantmentValue`    | "Зачаровываемость" предметов брони, в которых используется этот материал.                                                                                                                                                                                   |
| `equipSound`          | Запись в реестре звукового события, которое воспроизводится, когда вы надеваете броню, в которой используется этот материал. Для получения дополнительной информации о звуках посетите страницу [Пользовательские звуки](../sounds/custom). |
| `toughness`           | Плавающее значение, которое отражает "прочность" материала брони - по сути, то, насколько хорошо броня будет поглощать урон.                                                                                                                                |
| `knockbackResistance` | Плавающее значение, представляющее собой величину сопротивления удару, которую материал брони обеспечивает владельцу.                                                                                                                                       |
| `repairIngredient`    | Метка предмета, представляющая все предметы, которые могут быть использованы для ремонта доспехов из этого материала в наковальне.                                                                                                                          |
| `assetId`             | Ключ реестра `EquipmentAsset`. Это должна быть константа ключа реестра активов оборудования, созданная вами ранее.                                                                                                                          |

Если вам трудно определить значения для любого из параметров, вы можете обратиться к экземплярам `ArmorMaterial`, которые можно найти в интерфейсе `ArmorMaterials`.

## Создание предметов брони {#creating-the-armor-items}

Теперь, когда вы зарегистрировали материал, вы можете создать предметы брони в своем классе `ModItems`:

Очевидно, что комплект брони необязательно должен включать все типы предметов, вы можете иметь комплект, состоящий только из ботинок, штанов и т.д. — классический черепаший панцирь — хороший пример комплекта брони с отсутствующими слотами.

В отличие от `ToolMaterial`, `ArmorMaterial` не хранит никакой информации о прочности предметов. По этой причине базовая прочность должна быть добавлена вручную к предметам `Item.Properties` при их регистрации.

Это достигается путем передачи константы `BASE_DURABILITY`, которую мы создали ранее, в метод `maxDamage` в классе `Item.Properties`.

@[code transcludeWith=:::6](@/reference/1.21.4/src/main/java/com/example/docs/item/ModItems.java)

Вам также потребуется **добавить предметы в группу предметов**, если вы хотите, чтобы они были доступны из творческого инвентаря.

Как и для всех элементов, для них также следует создать ключи перевода.

## Текстуры и Модели {#textures-and-models}

Вам нужно будет создать набор текстур для предметов и набор текстур для самой брони, когда ее носят "гуманоидные" существа (игроки, зомби, скелеты и т.д.).

### Текстуры и модели предметов {#item-textures-and-model}

Эти текстуры ничем не отличаются от других предметов — вам необходимо создать текстуры и создать общую сгенерированную модель предмета, что было рассмотрено в руководстве [Создание вашего первого предмета](./first-item#adding-a-texture-and-model).

В качестве примера вы можете использовать следующие текстуры и модель JSON в качестве справочного материала.

<DownloadEntry visualURL="/assets/develop/items/armor_0.png" downloadURL="/assets/develop/items/example_armor_item_textures.zip">Текстуры предметов</DownloadEntry>

:::info
Вам понадобятся файлы моделей JSON для всех предметов, а не только для шлема, принцип тот же, что и для других моделей предметов.
:::

@[code](@/reference/1.21.4/src/main/generated/assets/fabric-docs-reference/models/item/guidite_helmet.json)

Как видите, в игре предметы брони должны иметь подходящие модели:

![Модели предметов брони](/assets/develop/items/armor_1.png)

### Текстуры брони {#armor-textures}

Когда существо наденет вашу броню, ничего не будет показано. Это происходит потому, что вам не хватает текстур и определений моделей оборудования.

![Модель сломанной брони на игроке](/assets/develop/items/armor_2.png)

Для текстуры брони есть два слоя, оба должны присутствовать.

Ранее мы создали константу `RegistryKey<EquipmentAsset>` с именем `GUIDITE_ARMOR_MATERIAL_KEY`, которую мы передали в наш конструктор `ArmorMaterial`. Рекомендуется называть текстуру аналогичным образом, поэтому в нашем случае это `guidite.png`

- `assets/mod-id/textures/entity/equipment/humanoid/guid item.png` - Содержит текстуры верхней части тела и ботинок.
- `assets/mod-id/textures/entity/equipment/humanoid_leggings/guid item.png` - Содержит текстуры ног.

<DownloadEntry downloadURL="/assets/develop/items/example_armor_layer_textures.zip">Текстуры моделей брони Guidite</DownloadEntry>

:::tip
Если вы обновляетесь до версии 1.21.4 со старой версии игры, то текстура брони `layer0.png` будет помещена в папку `humanoid`, а текстура брони `layer1.png` - в папку `humanoid_leggings`.
:::

Далее вам нужно будет создать соответствующее определение модели оборудования. Они находятся в папке `/assets/mod-id/equipment/`.

Константа `RegistryKey<EquipmentAsset>`, которую мы создали ранее, будет определять имя файла JSON. В данном случае это будет `guidite.json`.

Так как мы планируем добавлять только "гуманоидов" (шлем, нагрудник, поножи, ботинки и т.д.) части брони, определение модели нашего снаряжения, будут выглядеть следующим образом:

@[code](@/reference/1.21.4/src/main/resources/assets/fabric-docs-reference/equipment/guidite.json)

При наличии текстур и определения модели снаряжения вы сможете увидеть свою броню на объектах, которые ее носят:

![Рабочая модель брони на игроке](/assets/develop/items/armor_3.png)

<!-- TODO: A guide on creating equipment for dyeable armor could prove useful. -->
